--- a/Data_extraction_dissertation_data_.ipynb
+++ b/Data_extraction_dissertation_data_.ipynb
@@ -35,8 +35,7 @@
         "\n",
         "In this note book l will describe how the data extraction processes l embarked on, to prepare the data for analysis.  \n",
         "\n",
-        "The data consists of UCT publications from the Web of Science website published from 2010 to date. There were a total of 124 publications that I downloaded from the website. This number will be increased as I get access to more publications. \n",
-        "\n",
+        "The data consists of UCT publications from the (https://open.uct.ac.za/oai/request?verb=ListSets).\n",
         "The aim of this process was to extract publications content which was to be used for analysis. This meant that we would want to optimally extract paragraph texts and subscripts e.g. footnotes, html links or any other texts that would distort the data. \n",
         "\n",
         "This process was adapted using this towards-data-science article ( \n",
@@ -78,19 +77,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NqC6WqXtQXi8",
-        "outputId": "bf7b0444-7adc-49fa-93f5-171c5a7ced80"
+        "outputId": "c10c76e6-5e35-4560-dcfe-8c2e1510977a"
       },
       "source": [
         "#installing PyMuPDF\n",
         "!pip install PyMuPDF"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: PyMuPDF in /usr/local/lib/python3.7/dist-packages (1.19.4)\n"
+            "Collecting PyMuPDF\n",
+            "  Downloading PyMuPDF-1.19.6-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (8.8 MB)\n",
+            "\u001b[K     |████████████████████████████████| 8.8 MB 4.6 MB/s \n",
+            "\u001b[?25hInstalling collected packages: PyMuPDF\n",
+            "Successfully installed PyMuPDF-1.19.6\n"
           ]
         }
       ]
